--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.2.0",
     "bootstrap": "^4.5.3",
     "firebase": "^8.0.1",
+    "mdbreact": "^4.27.0",
     "react": "^17.0.1",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.4.0",
